[package]
name = "buildrecall"
description = "Use a cloud build farm to make rust builds fast."
version = "0.1.0"
edition = "2018"
license = "MIT"
website = "https://buildrecall.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
git2 = "0.13.21"
notify = "5.0.0-pre.12"
tokio = { version = "1.11.0", features = ["full"] }
