[package]
name = "buildrecall"
description = "Use a cloud build farm to make rust builds fast."
version = "0.1.0"
edition = "2018"
license = "MIT"
website = "https://buildrecall.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
git2 = "0.13.21"
hyper = "0.14.12"
notify = "5.0.0-pre.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
url = "2.2.2"
rand = "0.8.4"
base64 = "0.13.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
