[package]
name = "brr"
description = "Use a cloud build farm to make rust builds fast."
version = "0.0.13"
edition = "2018"
license = "MIT"
website = "https://buildrecall.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
git2 = { version = "0.13.22", features = ["vendored-libgit2"] }
hyper = "0.14.12"
notify = "4.0.17"
reqwest = { version = "0.11", features = [
    "blocking",
    "stream",
    "json",
    "brotli",
] }
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.66"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
url = "2.2.2"
rand = "0.8.4"
base64 = "0.13.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
dirs = "3.0.2"
tempdir = "0.3.7"
dialoguer = "0.8.0"
async-trait = "0.1.51"
glob = "0.3.0"
ignore = "0.4.18"
rust-crypto = "0.2.36"
itertools = "0.10.1"
futures = "0.3.17"
walkdir = "2.3.2"
thiserror = "1.0"
hyper-tls = "0.5.0"
brotli = "3.3.2"
tar = "0.4.37"
serde_qs = "0.8.4"
chrono = { version = "0.4.19", features = ["serde"] }
tokio-tungstenite = "0.15.0"


[dev-dependencies]
axum = "0.2.3"
